--- a/app/src/main/res/anim/scale.xml
+++ b/app/src/main/res/anim/scale.xml
@@ -1,9 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
 <set xmlns:android="http://schemas.android.com/apk/res/android">
-        <alpha android:toAlpha="0"
-            android:duration = "5000"
-            android:repeatCount = "infinite"
-            android:fromAlpha="1"/>
+<!--        <alpha android:toAlpha="0"-->
+<!--            android:duration = "5000"-->
+<!--            android:repeatCount = "infinite"-->
+<!--            android:fromAlpha="1"/>-->
 
 
 
